--- a/templates/home.html
+++ b/templates/home.html
@@ -58,9 +58,9 @@
            </section>
 
            <section id="inicio">
-
+<!--buscador por criterio-->
                 <section class="varios_buscadores">
-                    <form class="buscador_esp" action="/detalles" method="get">
+                    <form class="buscador_esp" action="/categoria" method="get">
                         <input type="text" name="por_categoria" placeholder="Busca por categoria" required>
                         <label for="por_categoria"></label>
                         <a href="#" class="boton-lupa">
@@ -68,7 +68,7 @@
 
                     </form>
 
-                    <form class="buscador_esp" action="/detalles" method="get">
+                    <form class="buscador_esp" action="/precio" method="get">
                         <input type="text" name="por_precio" placeholder="Buscar por precio" required>
                         <label for="por_precio"></label>
                         <a href="#" class="boton-lupa">
