--- a/templates/detalles.html
+++ b/templates/detalles.html
@@ -54,7 +54,7 @@
                     <div class="secciones">
                         {% for producto in productos %}
                         {% if producto.stock > 0 %}
-                        <div class="cajita_detalle">
+                        <div class="cajita_detalle2">
                             <div class="detalle"><img src="../static/img/producto-catalogo.jpg " alt="Imagen de camisa"></div>
 
                             
