--- a/templates/lista_ventas.html
+++ b/templates/lista_ventas.html
@@ -28,7 +28,7 @@
             <nav>
                 <ul id="menu-principal">
                     <li class="menu-inicio">
-                        <a href="{{ url_for('raiz') }}">Inicio</a>
+                        <a href="{{ url_for('raiz') }}">Cerrar sesion</a>
                     </li>
                     <li class="menu-inicio">
                         <a href="sobre-nos">Ayuda</a>
@@ -96,6 +96,8 @@
                         </tr>
                     </tbody>
                 </table>
+
+                
 
             </div>
 
