--- a/static/styles.css
+++ b/static/styles.css
@@ -599,3 +599,11 @@ tbody tr:hover {
     margin-bottom: 20px;
 
 }
+
+.cajita_detalle2 {
+    display: flex;
+    align-items: center;
+    padding: 85px;
+    text-align: center;
+    margin-left: -216px;
+}
